--- a/package.json
+++ b/package.json
@@ -15,9 +15,23 @@
   "author": "gandarfh <joao.ferreira@llama.com>",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@changesets/changelog-github": "^0.4.1",
+    "@changesets/cli": "^2.17.0",
+    "@emotion/eslint-plugin": "^11.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "lerna": "^4.0.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
-  "dependencies": {
-    "@changesets/cli": "^2.17.0"
-  }
+  "dependencies": {}
 }
