--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/*", "cli"],
   "npmClient": "yarn",
   "version": "independent",
   "useWorkspaces": true,
