--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@changesets/changelog-github": "^0.4.1",
     "@changesets/cli": "^2.17.0",
     "@emotion/eslint-plugin": "^11.2.0",
+    "@emotion/jest": "^11.3.0",
     "@storybook/addon-a11y": "^6.3.12",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@storybook/theming": "^6.3.12",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.4.1",
+    "@types/jest-axe": "^3.5.3",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -49,6 +54,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.5",
     "husky": ">=6",
+    "jest": "^27.2.5",
+    "jest-axe": "^5.0.1",
     "lerna": "^4.0.0",
     "lint-staged": ">=10",
     "prettier": "^2.4.1",
