--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "cli"
+      "cli",
+      "doc"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gandarfh/llama-design.git"
+    "url": "https://github.com/gandarfh/llama-ui.git"
   },
   "author": "gandarfh <joao.ferreira@llama.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint ./ --max-warnings=0",
     "lint:fix": "eslint ./ --max-warnings=0 --fix",
-    "cli": "yarn workspace @llama-ui/cli start",
+    "pkg": "yarn workspace",
+    "cli": "yarn pkg @llama-ui/cli start",
+    "doc": "yarn pkg @llama-ui/doc start",
     "prepare": "husky install",
     "storybook": "start-storybook -s ./assets -p 6006",
     "build-storybook": "build-storybook"
@@ -66,7 +69,7 @@
     "react-dom": "^17.0.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --max-warnings=0",
-    "*.ts?(x)": "eslint --cache --max-warnings=0"
+    "*.js": "eslint --cache --max-warnings=0 --fix",
+    "*.ts?(x)": "eslint --cache --max-warnings=0 --fix"
   }
 }
