--- a/packages/React/package.json
+++ b/packages/React/package.json
@@ -3,22 +3,29 @@
   "name": "@llama-ui/react",
   "version": "0.0.1",
   "description": "package to manage all packages",
-  "keywords": ["React Component", "llama ui", "UI library", "react"],
+  "keywords": [
+    "React Component",
+    "llama ui",
+    "UI library",
+    "react"
+  ],
   "author": "Joao <jgdsantosferreira@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gandarfh/llama-ui.git"
   },
   "typings": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
-    "publishConfig": {
+  "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.4.4",
     "react-dom": "^17.0.2",
     "react": "^17.0.2"
   },
