--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "scripts": {
     "lint": "eslint ./ --max-warnings=0",
     "lint:fix": "eslint ./ --max-warnings=0 --fix",
+    "test": "jest --env=jsdom",
+    "test:watch": "jest --env=jsdom --watch --coverage",
+    "test:cov": "jest --env=jsdom --coverage",
     "pkg": "yarn workspace",
     "cli": "yarn pkg @llama-ui/cli start",
     "doc": "yarn pkg @llama-ui/doc start",
@@ -28,6 +31,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "babel-loader": "^8.2.2",
     "@changesets/changelog-github": "^0.4.1",
     "@changesets/cli": "^2.17.0",
     "@emotion/eslint-plugin": "^11.2.0",
@@ -46,7 +53,6 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "babel-loader": "^8.2.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
