--- a/packages/React/package.json
+++ b/packages/React/package.json
@@ -25,11 +25,14 @@
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "typescript": "^4.4.4",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react": "^17.0.2"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "build": "rm -rf lib && tsc"
+  },
+  "dependencies": {
+    "@llama-ui/theme-system": "^0.0.1"
   }
 }
