--- a/packages/styles-system/tsconfig.json
+++ b/packages/styles-system/tsconfig.json
@@ -2,7 +2,8 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "removeComments": false
   },
   "include": ["src", "../../llama.d.ts"],
   "exclude": ["stories", "test"]
