--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "removeComments": false,
     "module": "commonjs",
-    "target": "es5",
+    "target": "ESNext",
     "lib": ["es6", "ES2020", "dom"],
-        "sourceMap": false,
+    "sourceMap": false,
     "allowJs": false,
     "moduleResolution": "node",
     "strict": true,
