--- a/packages/styles-system/package.json
+++ b/packages/styles-system/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.5.0",
-    "@llama-ui/theme-system": "^0.0.1"
+    "@llama-ui/theme-system": "^0.0.1",
+    "lodash": "^4.17.21"
   }
 }
