--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,13 +1,13 @@
 {
   "private": false,
-  "name": "@llama-ui/react",
+  "name": "@llama-ui/layout",
   "version": "0.0.1",
-  "description": "package to manage all packages",
+  "description": "all components to manage and control the layout.",
   "keywords": [
     "React Component",
     "llama ui",
     "UI library",
-    "react"
+    "layout"
   ],
   "author": "Joao <jgdsantosferreira@gmail.com>",
   "repository": {
@@ -33,8 +33,6 @@
     "build": "rm -rf lib && tsc"
   },
   "dependencies": {
-    "@llama-ui/layout": "^0.0.1",
-    "@llama-ui/styles-system": "^0.0.1",
-    "@llama-ui/theme-system": "^0.0.1"
+    "@llama-ui/styles-system": "^0.0.1"
   }
 }
