--- a/packages/theme-system/package.json
+++ b/packages/theme-system/package.json
@@ -33,6 +33,8 @@
     "build": "rm -rf lib && tsc"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0"
+    "@emotion/react": "^11.5.0",
+    "@llama-ui/styles-system": "^0.0.3",
+    "cal-sans": "^1.0.1"
   }
 }
