--- a/packages/theme-system/tsconfig.json
+++ b/packages/theme-system/tsconfig.json
@@ -2,8 +2,15 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
     "outDir": "./lib"
   },
-  "include": ["src", "styled.d.ts"],
-  "exclude": ["stories", "test"]
+  "include": [
+    "src",
+    "./src/llama.ts"
+  ],
+  "exclude": [
+    "stories",
+    "test"
+  ]
 }
