--- a/packages/React/tsconfig.json
+++ b/packages/React/tsconfig.json
@@ -4,6 +4,12 @@
   "compilerOptions": {
     "outDir": "./lib"
   },
-  "include": ["src", "../../llama.d.ts"],
-  "exclude": ["stories", "test"]
+  "include": [
+    "src",
+    "../../node_modules/@llama-ui/theme-system/lib/llama.d.ts"
+  ],
+  "exclude": [
+    "stories",
+    "test"
+  ]
 }
