Chore/styled system (#4)
* wip: changing some props

* wip: changing some props

Signed-off-by: gandarfh <jgdsantosferreira@gmail.com>

* feat: support to css variables to values tokens

* wip: components config support

* feat: implement props to responsive with template support

* wip: hotfix tests to new config theme

* wip: hotfix tests to new config theme

* chore: add changelog

--- a/packages/theme-system/package.json
+++ b/packages/theme-system/package.json
@@ -33,6 +33,7 @@
     "build": "rm -rf lib && tsc"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0"
+    "@emotion/react": "^11.5.0",
+    "cal-sans": "^1.0.1"
   }
 }
