fix: change to prod dependencies

--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -17,7 +17,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
+  "dependencies": {
     "prettier": "^2.4.1"
   },
   "scripts": {}
